--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "build": "tsc",
